# electricmeters

./: .gitignore  LICENSE  pyproject.toml
electricmeters/: __init__.py  __main__.py  compose.py  config.py  crc16.py  meter.py
electricmeters/energomera/: __init__.py  config.py  energomera303.py
electricmeters/mercury/: __init__.py  cli.py  config.py  mercury236.py
examples/compose/: em-compose.toml  ru.toml  short.toml
